added js file and day.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <!-- Timeblocks go here -->
     </div>
 
+
+    <!-- JS scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="path/to/dayjs/dayjs.min.js"></script>
+    <script>
+    dayjs().format() 
+    </script>
   </body>
 </html>
