first time block and shows current time

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <div class="time-block">
+        <div class="row">
+            <div class="hour">9 AM</div>
+            
+            <textarea name="" id="" class="past"></textarea>
+            <button class="saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+
+
     </div>
 
 
@@ -40,5 +51,6 @@
     <script>
     dayjs().format() 
     </script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
