color code blocks based on past/present/future

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div class="time-block">
+      <!-- <div class="time-block">
         <div class="row">
             <div class="col-md-1">
                 <div class="hour">9 AM</div>
@@ -57,7 +57,7 @@
                 <button class="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
-      </div>
+      </div> -->
 
 
 
@@ -72,10 +72,9 @@
     <!-- JS scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="path/to/dayjs/dayjs.min.js"></script>
-    <script>
-    dayjs().format() 
-    </script>
+    
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script>dayjs().format()</script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
